--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
         }
     ],
     "require": {
+        "illuminate/support": "5.6.*|5.7.*",
         "php": "^7.1"
     },
     "require-dev": {
-        "orchestra/testbench": "3.6.*",
+        "orchestra/testbench": "3.6.*|3.7.*",
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
