--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
         }
     ],
     "require": {
-        "illuminate/support": "5.6.*|5.7.*",
-        "php": "^7.1"
+        "php": "^7.1",
+        "illuminate/support": "5.6.*|5.7.*|5.8.*"
     },
     "require-dev": {
-        "orchestra/testbench": "3.6.*|3.7.*",
-        "phpunit/phpunit": "^7.0"
+        "orchestra/testbench": "3.6.*|3.7.*|3.8.*",
+        "phpunit/phpunit": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
