--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "5.6.*|5.7.*|5.8.*"
+        "illuminate/support": "5.6.*|5.7.*|5.8.*|^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "3.6.*|3.7.*|3.8.*",
+        "orchestra/testbench": "3.6.*|3.7.*|3.8.*|^4.0",
         "phpunit/phpunit": "^7.0|^8.0"
     },
     "autoload": {
@@ -36,7 +36,6 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
     },
     "config": {
         "sort-packages": true
